[package]
name = "fuzzerang"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Efficient random number generators and distributions for fuzzing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
rand = "0.8.5"
rand_core = "0.6.4"

[dev-dependencies]
concat-idents = "1.1.5"
